--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
