--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
     "zustand": "^4.3.8"
