--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "jest": "^29.5.0"
   }
 }
