--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "prisma": "^4.16.1"
   }
 }
