--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb://localhost:27017/Tasks"
+
+
+# si lleva NEXT_PUBLIC es visible del lado del cliente, en caso contrario NO
+# EXAMPLE: NEXT_PUBLIC_CLIENT_KEY=123XYZ
