--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,17 @@ services:
     image: mongo
     container_name: tasks-database
     ports:
-      - 27017:27017
+      - 27019:27017
     volumes:
       - ./mongo:/data/db
+  mongo_replica:
+    build: ./mongo_replica
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_ROOT_DATABASE: db_replica
+      MONGO_REPLICA_HOST: localhost
+      MONGO_REPLICA_PORT: "27017"
+    ports:
+      - 27018:27017
